[project]
name = "pathways-api"
version = "0.1.0"
description = "Pathways api for Open Targets"
readme = "README.md"
authors = [{ name = "Open Targets", email = "contact@opentargets.org" }]

requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]

[dependency-groups]
lint = ["ruff>=0.7.1"]
